Fix tags and category pages. fix spacing. fix pagination.

--- a/pelican/cmr-theme/static/css/dox.css
+++ b/pelican/cmr-theme/static/css/dox.css
@@ -76,6 +76,9 @@ div.v150 {
 div.v50 {
     height: 50px;
 }
+div.v20 {
+    height: 20px;
+}
 
 hr {
     text-align: center;
